[package]
name = "tide-upload-limit"
version = "0.1.0"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.22"
tide = "0.15.0"
async-trait = "0.1.42"

[dev-dependencies]
test-case = "1.0.0"
