[package]
name = "async-read-limit"
version = "0.1.0"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.22"
futures-io = "0.3.8"
pin-project = "1.0.2"

[dev-dependencies]
futures-util = { version = "0.3.8", features = ["io"] }
test-case = { git = "https://github.com/frondeus/test-case" }
async-std = { version = "1.8.0", features = ["attributes"] }